syntax = "proto3";

option go_package = "genproto/auth";

package auth;

import "common1.proto";

service UserService{
    rpc Register(UserCreateReq) returns(Void);
    rpc Login(UserLoginReq) returns(TokenRes);
    rpc Profile(ById) returns(UserRes);
    rpc DeleteProfile(ById) returns(Void);
    rpc GetAllUsers(GetAllUsersReq) returns(GetAllUsersRes);
}

message UserRes{
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string username = 4;
    string role = 5;
    string is_admin = 6;
    string password = 7;
}

message UserCreateReq{
    string first_name = 1;
    string last_name = 2;
    string username = 3;
    string password = 4;
    string role = 5;
    string is_admin = 6;
}

message UserLoginReq{
    string username = 1;
    string password = 2;
}

message TokenRes{
    string token = 1;
    string exp_at = 2;
}

message GetAllUsersReq{
    string role = 1;
    int32 page = 2;
}

message GetAllUsersRes{
    repeated UserRes users = 1;
}